<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TextView
        android:id="@+id/idTextViewWeather2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/weather"
        android:textColor="@color/color_weather"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTextViewNameCity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_city"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextViewWeather2" />

    <TextView
        android:id="@+id/idTextViewHumidity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextViewNameCity2" />

    <TextView
        android:id="@+id/idTextViewSpeedWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextViewHumidity2" />
    <TextView
        android:id="@+id/idTextViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextViewSpeedWind" />

</androidx.constraintlayout.widget.ConstraintLayout>